Cursor remains a 'double headed arrow' when opening the 'Add Node' menu. #48192

Closed
opened 2016-04-19 02:57:40 +02:00 by Ray Mairlot · 8 comments

System Information
Windows 10 64-bit, Nvidia gtx 570, Nvidia gt 610

Blender Version
Broken: 2.77a, 9f39619 (latest 64-bit build)
Worked: (optional)

Short description of error

If you place your cursor over the edge of a node the cursor turns into a double headed arrow to indicate that you can resize a node. If you press Shift+A to open the 'Add Node' menu while the cursor is in this 'double headed' state the cursor will remain like this while browsing the menu and while placing a new node chosen from the menu.

I know it's a trivial thing, but it just seems a little odd when it happens.

Exact steps for others to reproduce the error

  • Add a node to any of the node systems in Blender, e.g. compositing nodes.
  • Hover your cursor over the edge of a node to change it to the 'double headed arrow'.
  • Press Shift+A to open the 'Add Node' menu.
  • The cursor remains 'double headed' while browsing the menu.
  • Clicking on a node in the menu will add the node and the cursor remains the same.
  • Placing the node down finally changes the cursor back to the normal arrow.
**System Information** Windows 10 64-bit, Nvidia gtx 570, Nvidia gt 610 **Blender Version** Broken: 2.77a, 9f39619 (latest 64-bit build) Worked: (optional) **Short description of error** If you place your cursor over the edge of a node the cursor turns into a double headed arrow to indicate that you can resize a node. If you press Shift+A to open the 'Add Node' menu while the cursor is in this 'double headed' state the cursor will remain like this while browsing the menu and while placing a new node chosen from the menu. I know it's a trivial thing, but it just seems a little odd when it happens. **Exact steps for others to reproduce the error** - Add a node to any of the node systems in Blender, e.g. compositing nodes. - Hover your cursor over the edge of a node to change it to the 'double headed arrow'. - Press Shift+A to open the 'Add Node' menu. - The cursor remains 'double headed' while browsing the menu. - Clicking on a node in the menu will add the node and the cursor remains the same. - Placing the node down finally changes the cursor back to the normal arrow.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @RayMairlot

Added subscriber: @RayMairlot

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Its only possible to open the menu in certain cases (not most of the time in own tests).
So the bug may be that you can open the menu while hovering over the region edge.

Its only possible to open the menu in certain cases (not most of the time in own tests). So the bug may be that you can open the menu while hovering over the region edge.

Added subscribers: @JulianEisel, @Sergey

Added subscribers: @JulianEisel, @Sergey

@ideasman42, the issue happens when you open the menu when mouse is over the node corner (right-bottom corner which you use to resize node)

@JulianEisel, mind having a look perhaps :)

@ideasman42, the issue happens when you open the menu when mouse is over the node corner (right-bottom corner which you use to resize node) @JulianEisel, mind having a look perhaps :)
Julian Eisel was assigned by Sergey Sharybin 2016-04-19 13:28:03 +02:00

This issue was referenced by 37493fb9fe

This issue was referenced by 37493fb9fefca6a090bea689de11b4b995b7bdb0
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
5 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#48192
No description provided.